tests/error/type_errors/fun_ty_mismatch_1.err
Error: Type mismatch (at $FILE:11:11)
   | 
 9 |         return x > 0
10 | 
11 |     return bar
   |            ^^^ Expected return value of type `int -> int`, got `int ->
   |                bool`

Guppy compilation failed due to 1 previous error
